--- a/.github/workflows/deploy-cart-manager-agent.yml
+++ b/.github/workflows/deploy-cart-manager-agent.yml
@@ -13,6 +13,10 @@ on:
 jobs:
   run-cart-manager-agent:
     runs-on: ubuntu-latest
+    permissions:
+        id-token: write
+        contents: read
+        
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
