--- a/.github/workflows/deploy-interior-design-agent.yml
+++ b/.github/workflows/deploy-interior-design-agent.yml
@@ -15,6 +15,10 @@ on:
 jobs:
   run-interior-design-agent:
     runs-on: ubuntu-latest
+    permissions:
+        id-token: write
+        contents: read
+        
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
