--- a/.github/workflows/deploy-inventory-agent.yml
+++ b/.github/workflows/deploy-inventory-agent.yml
@@ -14,6 +14,10 @@ on:
 jobs:
   run-inventory-agent:
     runs-on: ubuntu-latest
+    permissions:
+        id-token: write
+        contents: read
+        
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
