--- a/src/workflows/0502_sample_agent_deployment.yml
+++ b/src/workflows/0502_sample_agent_deployment.yml
@@ -37,7 +37,9 @@ jobs:
       - name: Login via Azure CLI
         uses: azure/login@v2.1.1
         with:
-            creds: ${{ secrets.AZURE_CREDENTIALS }}
+            client-id: ${{ secrets.AZURE_CLIENT_ID }}
+            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Run customer loyalty agent initializer
         run: |
